--- a/results/.gitattributes
+++ b/results/.gitattributes
@@ -1,2 +1,3 @@
 *.avi filter=lfs diff=lfs merge=lfs -text
 StepFour_my_tracking_results.avi filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
